; ModuleID = '/home/carl/AnghaBench/vlc/src/misc/extr_block.c_block_FilePath.c'
source_filename = "/home/carl/AnghaBench/vlc/src/misc/extr_block.c_block_FilePath.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@O_RDONLY = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32* @block_FilePath(i8* %0, i32 %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32*, align 8
  store i8* %0, i8** %4, align 8
  store i32 %1, i32* %5, align 4
  %8 = load i8*, i8** %4, align 8
  %9 = load i32, i32* @O_RDONLY, align 4
  %10 = call i32 @vlc_open(i8* %8, i32 %9)
  store i32 %10, i32* %6, align 4
  %11 = load i32, i32* %6, align 4
  %12 = icmp eq i32 %11, -1
  br i1 %12, label %13, label %14

13:                                               ; preds = %2
  store i32* null, i32** %3, align 8
  br label %21

14:                                               ; preds = %2
  %15 = load i32, i32* %6, align 4
  %16 = load i32, i32* %5, align 4
  %17 = call i32* @block_File(i32 %15, i32 %16)
  store i32* %17, i32** %7, align 8
  %18 = load i32, i32* %6, align 4
  %19 = call i32 @vlc_close(i32 %18)
  %20 = load i32*, i32** %7, align 8
  store i32* %20, i32** %3, align 8
  br label %21

21:                                               ; preds = %14, %13
  %22 = load i32*, i32** %3, align 8
  ret i32* %22
}

declare dso_local i32 @vlc_open(i8*, i32) #1

declare dso_local i32* @block_File(i32, i32) #1

declare dso_local i32 @vlc_close(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
